--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -37,16 +37,16 @@
     "    y = data.pop(y_feature)\n",
     "    x = data\n",
     "    importances = mutual_info_classif(x, y)\n",
-    "    info_gain_map = {}\n",
-    "    for feature, gain in zip(all_features, importances):\n",
-    "        info_gain_map[feature] = gain\n",
+    "    info_gain_map = {\n",
+    "        feature: gain for feature, gain in zip(all_features, importances)\n",
+    "    }\n",
     "\n",
     "    print(json.dumps(info_gain_map, indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -75,7 +75,7 @@
    "source": [
     "# pre-processor 1\n",
     "def read_data():\n",
-    "    telco_data = pd.read_csv('WA_Fn-UseC_-Telco-Customer-Churn.csv',\n",
+    "    return pd.read_csv('WA_Fn-UseC_-Telco-Customer-Churn.csv',\n",
     "                             converters={\n",
     "                                 'gender': lambda x: int(x == 'Female'),\n",
     "                                 'Partner': lambda x: int(x == 'Yes'),\n",
@@ -84,8 +84,6 @@
     "                                 'PaperlessBilling': lambda x: int(x =='Yes'),\n",
     "                                 'Churn': lambda x: int(x =='Yes'),\n",
     "                             })\n",
-    "\n",
-    "    return telco_data\n",
     "\n",
     "def process_data(telco_data):\n",
     "    telco_data.drop('customerID', axis=1, inplace=True)\n",
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -131,13 +129,12 @@
    "source": [
     "# loss function\n",
     "def loss(y_predicted, y_actual, size):\n",
-    "    error = 0.5 * np.sum((y_actual - y_predicted) ** 2) / size\n",
-    "    return error"
+    "    return 0.5 * np.sum((y_actual - y_predicted) ** 2) / size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -147,12 +144,12 @@
    "source": [
     "# accuracy function\n",
     "def accuracy(y_predicted, y_actual):\n",
-    "    return  np.sum(y_actual == y_predicted) / y_actual.shape[0]"
+    "    return np.sum(y_actual == y_predicted) / y_actual.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -169,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -182,7 +179,7 @@
     "    no_of_data, no_of_features = x.shape\n",
     "    w = np.random.rand(no_of_features, 1)\n",
     "    error = 0\n",
-    "    for i in range(no_of_iterations):\n",
+    "    for _ in range(no_of_iterations):\n",
     "        z = np.dot(x, w)\n",
     "        h = np.tanh(z)\n",
     "        error = loss(h, y, no_of_data)\n",
@@ -196,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -215,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -229,16 +226,12 @@
     "    w = np.array([1/no_of_data] * no_of_data)\n",
     "    h = []\n",
     "    z = []\n",
-    "    for i in range(k):\n",
+    "    for _ in range(k):\n",
     "        x_data, y_data = resample(example_x, example_y, w)\n",
     "        w_learn = train(x_data, y_data, early_terminate_threshold=0.5)\n",
     "        h_k = np.tanh(np.dot(example_x, w_learn))\n",
     "        h_k = predict(h_k)\n",
-    "        error = 0\n",
-    "        for j in range(no_of_data):\n",
-    "            if h_k[j] != example_y[j]:\n",
-    "                error += w[j]\n",
-    "\n",
+    "        error = sum(w[j] for j in range(no_of_data) if h_k[j] != example_y[j])\n",
     "        if error > 0.5:\n",
     "            continue\n",
     "\n",
@@ -255,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -279,13 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.6706884315117104.\n"
+      "Logistic regression accuracy 0.6444286728176012.\n"
      ]
     }
    ],
@@ -305,13 +298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adaboost regression accuracy 0.8026969481902059.\n"
+      "Adaboost regression accuracy 0.7920511000709723.\n"
      ]
     }
    ],
@@ -339,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": []
