Added random seed and tested for subset of features using information gain

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import math\n",
+    "import random\n",
     "\n",
     "from pandas import DataFrame\n",
     "import pandas as pd\n",
@@ -21,7 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 203,
+   "outputs": [],
+   "source": [
+    "# set random seed\n",
+    "random.seed(a=2)\n",
+    "np.random.seed(5)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -41,12 +58,13 @@
     "        feature: gain for feature, gain in zip(all_features, importances)\n",
     "    }\n",
     "\n",
-    "    print(json.dumps(info_gain_map, indent=4))"
+    "    info_gain_map = {k: v for k, v in sorted(info_gain_map.items(), key=lambda item: item[1], reverse=True)}\n",
+    "    return list(info_gain_map.keys())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 205,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 206,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -119,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 207,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -134,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 208,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -149,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 209,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -166,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 210,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -178,7 +196,6 @@
     "def train(x, y, early_terminate_threshold=0.0, learning_rate=0.0001, no_of_iterations=5000):\n",
     "    no_of_data, no_of_features = x.shape\n",
     "    w = np.random.rand(no_of_features, 1)\n",
-    "    error = 0\n",
     "    for _ in range(no_of_iterations):\n",
     "        z = np.dot(x, w)\n",
     "        h = np.tanh(z)\n",
@@ -193,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 211,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -212,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 212,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -248,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 213,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -257,28 +274,52 @@
    "outputs": [],
    "source": [
     "data = preprocess()\n",
-    "data.insert(0, 'Ones', 1.0)\n",
-    "data = data.to_numpy()\n",
-    "rows, columns = data.shape\n",
+    "train_dataset, test_dataset = train_test_split(data, test_size=0.2, random_state=10)\n",
     "\n",
-    "data_x = data[:, :-1]\n",
-    "data_y = data[:, -1]\n",
+    "columns = info_gain(train_dataset)\n",
+    "feature_cutoff = 9\n",
+    "columns_to_use = columns[0:feature_cutoff]\n",
+    "columns_to_use.append('Churn')\n",
+    "reduced_training, reduced_test = train_dataset[columns_to_use], test_dataset[columns_to_use]\n",
     "\n",
-    "data_y = np.array([1.0 if it > 0 else -1.0 for it in data_y])\n",
-    "data_y = data_y.reshape((data_y.shape[0], 1))\n",
+    "reduced_training.insert(0, 'Ones', 1.0)\n",
+    "reduced_training = reduced_training.to_numpy()\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=10)"
+    "reduced_test.insert(0, 'Ones', 1.0)\n",
+    "reduced_test = reduced_test.to_numpy()\n",
+    "\n",
+    "x_train = reduced_training[:, :-1]\n",
+    "y_train = reduced_training[:, -1]\n",
+    "y_train = np.array([1.0 if it > 0 else -1.0 for it in y_train])\n",
+    "y_train = y_train.reshape((y_train.shape[0], 1))\n",
+    "\n",
+    "x_test = reduced_test[:, :-1]\n",
+    "y_test = reduced_test[:, -1]\n",
+    "y_test = np.array([1.0 if it > 0 else -1.0 for it in y_test])\n",
+    "y_test = y_test.reshape((y_test.shape[0], 1))\n",
+    "\n",
+    "# data.insert(0, 'Ones', 1.0)\n",
+    "# data = data.to_numpy()\n",
+    "# rows, columns = data.shape\n",
+    "#\n",
+    "# data_x = data[:, :-1]\n",
+    "# data_y = data[:, -1]\n",
+    "#\n",
+    "# data_y = np.array([1.0 if it > 0 else -1.0 for it in data_y])\n",
+    "# data_y = data_y.reshape((data_y.shape[0], 1))\n",
+    "#\n",
+    "# x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 214,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.6444286728176012.\n"
+      "Logistic regression accuracy 0.6572036905606813.\n"
      ]
     }
    ],
@@ -298,13 +339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 215,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adaboost regression accuracy 0.7920511000709723.\n"
+      "Adaboost accuracy 0.7806955287437899.\n"
      ]
     }
    ],
@@ -313,15 +354,15 @@
     "h_ada, z_ada = adaboost(x_train, y_train, 15)\n",
     "\n",
     "hypo = np.zeros(y_test.shape)\n",
-    "for h, z in zip(h_ada, z_ada):\n",
-    "    l = np.tanh(np.dot(x_test, h))\n",
+    "for _h, _z in zip(h_ada, z_ada):\n",
+    "    l = np.tanh(np.dot(x_test, _h))\n",
     "    h_out = predict(l)\n",
-    "    hypo += z * l\n",
+    "    hypo += _z * l\n",
     "\n",
     "hypo /= sum(z_ada)\n",
     "\n",
     "h_out = predict(hypo)\n",
-    "print('Adaboost regression accuracy {}.'.format(accuracy(h_out, y_test)))\n"
+    "print('Adaboost accuracy {}.'.format(accuracy(h_out, y_test)))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -332,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": []
