Need to pre-process adult.train

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 110,
    "outputs": [],
    "source": [
     "# set random seed\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 111,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 112,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 113,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "# pre-processor 1\n",
-    "def read_data():\n",
+    "def read_telco_data():\n",
     "    return pd.read_csv('WA_Fn-UseC_-Telco-Customer-Churn.csv',\n",
     "                             converters={\n",
     "                                 'gender': lambda x: int(x == 'Female'),\n",
@@ -103,7 +103,7 @@
     "                                 'Churn': lambda x: int(x =='Yes'),\n",
     "                             })\n",
     "\n",
-    "def process_data(telco_data):\n",
+    "def process_telco_data(telco_data):\n",
     "    telco_data.drop('customerID', axis=1, inplace=True)\n",
     "    telco_data = telco_data.astype({\n",
     "        'tenure': int,\n",
@@ -128,16 +128,70 @@
     "\n",
     "    return telco_data\n",
     "\n",
-    "def preprocess():\n",
-    "    telco_data = read_data()\n",
-    "    telco_data = process_data(telco_data)\n",
+    "def preprocess_telco_data():\n",
+    "    telco_data = read_telco_data()\n",
+    "    telco_data = process_telco_data(telco_data)\n",
     "    telco_data.to_csv('telco.csv')\n",
     "    return telco_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 114,
+   "outputs": [],
+   "source": [
+    "# pre processor 2\n",
+    "def read_adult_data():\n",
+    "    column_names = ['C'+str(i) for i in range(15)]\n",
+    "    return pd.read_csv('adult.csv',\n",
+    "                         names=column_names,\n",
+    "                         header=None,\n",
+    "                         sep=' *, * ',\n",
+    "                         engine=\"python\",\n",
+    "                         converters={\n",
+    "                            'C9': lambda x: float(x == 'Male'),\n",
+    "                            'C14': lambda x: float(x == '>50K')\n",
+    "                         })\n",
+    "\n",
+    "def process_adult_data(adult_data):\n",
+    "    all_columns = list(adult_data.columns)\n",
+    "    missing_value_columns = [\n",
+    "        column\n",
+    "        for column in all_columns\n",
+    "        if '?' in adult_data[column].values.tolist()\n",
+    "    ]\n",
+    "\n",
+    "    for column in missing_value_columns:\n",
+    "        adult_data[column].replace(['?'], adult_data[column].mode(), inplace=True)\n",
+    "\n",
+    "    columns_to_encode = ['C1', 'C3', 'C5', 'C6', 'C7', 'C8', 'C13']\n",
+    "\n",
+    "    for column in columns_to_encode:\n",
+    "        adult_data = encode_and_bind(adult_data, column)\n",
+    "\n",
+    "    adult_data.insert(len(adult_data.columns)-1, 'C14', adult_data.pop('C14'))\n",
+    "\n",
+    "    all_columns = list(adult_data.columns)\n",
+    "    adult_data[all_columns] = MinMaxScaler().fit_transform(adult_data[all_columns])\n",
+    "\n",
+    "    return adult_data\n",
+    "\n",
+    "def preprocess_adult_data():\n",
+    "    adult_data = read_adult_data()\n",
+    "    adult_data = process_adult_data(adult_data)\n",
+    "    adult_data.to_csv('adult-data.csv')\n",
+    "    return adult_data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -152,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 116,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -167,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 117,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -184,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 118,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -210,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 119,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -229,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 120,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -265,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 121,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -273,53 +327,55 @@
    },
    "outputs": [],
    "source": [
-    "data = preprocess()\n",
-    "train_dataset, test_dataset = train_test_split(data, test_size=0.2, random_state=10)\n",
-    "\n",
-    "columns = info_gain(train_dataset)\n",
-    "feature_cutoff = 9\n",
-    "columns_to_use = columns[0:feature_cutoff]\n",
-    "columns_to_use.append('Churn')\n",
-    "reduced_training, reduced_test = train_dataset[columns_to_use], test_dataset[columns_to_use]\n",
-    "\n",
-    "reduced_training.insert(0, 'Ones', 1.0)\n",
-    "reduced_training = reduced_training.to_numpy()\n",
-    "\n",
-    "reduced_test.insert(0, 'Ones', 1.0)\n",
-    "reduced_test = reduced_test.to_numpy()\n",
-    "\n",
-    "x_train = reduced_training[:, :-1]\n",
-    "y_train = reduced_training[:, -1]\n",
-    "y_train = np.array([1.0 if it > 0 else -1.0 for it in y_train])\n",
-    "y_train = y_train.reshape((y_train.shape[0], 1))\n",
-    "\n",
-    "x_test = reduced_test[:, :-1]\n",
-    "y_test = reduced_test[:, -1]\n",
-    "y_test = np.array([1.0 if it > 0 else -1.0 for it in y_test])\n",
-    "y_test = y_test.reshape((y_test.shape[0], 1))\n",
-    "\n",
-    "# data.insert(0, 'Ones', 1.0)\n",
-    "# data = data.to_numpy()\n",
-    "# rows, columns = data.shape\n",
+    "# data = preprocess_telco_data()\n",
+    "data = preprocess_adult_data()\n",
+    "# final_column = data.columns[-1]\n",
+    "# train_dataset, test_dataset = train_test_split(data, test_size=0.2, random_state=10)\n",
     "#\n",
-    "# data_x = data[:, :-1]\n",
-    "# data_y = data[:, -1]\n",
+    "# columns = info_gain(train_dataset)\n",
+    "# feature_cutoff = 70\n",
+    "# columns_to_use = columns[0:feature_cutoff]\n",
+    "# columns_to_use.append(final_column)\n",
+    "# reduced_training, reduced_test = train_dataset[columns_to_use], test_dataset[columns_to_use]\n",
     "#\n",
-    "# data_y = np.array([1.0 if it > 0 else -1.0 for it in data_y])\n",
-    "# data_y = data_y.reshape((data_y.shape[0], 1))\n",
+    "# reduced_training.insert(0, 'Ones', 1.0)\n",
+    "# reduced_training = reduced_training.to_numpy()\n",
     "#\n",
-    "# x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=10)"
+    "# reduced_test.insert(0, 'Ones', 1.0)\n",
+    "# reduced_test = reduced_test.to_numpy()\n",
+    "#\n",
+    "# x_train = reduced_training[:, :-1]\n",
+    "# y_train = reduced_training[:, -1]\n",
+    "# y_train = np.array([1.0 if it > 0 else -1.0 for it in y_train])\n",
+    "# y_train = y_train.reshape((y_train.shape[0], 1))\n",
+    "#\n",
+    "# x_test = reduced_test[:, :-1]\n",
+    "# y_test = reduced_test[:, -1]\n",
+    "# y_test = np.array([1.0 if it > 0 else -1.0 for it in y_test])\n",
+    "# y_test = y_test.reshape((y_test.shape[0], 1))\n",
+    "\n",
+    "data.insert(0, 'Ones', 1.0)\n",
+    "data = data.to_numpy()\n",
+    "rows, columns = data.shape\n",
+    "\n",
+    "data_x = data[:, :-1]\n",
+    "data_y = data[:, -1]\n",
+    "\n",
+    "data_y = np.array([1.0 if it > 0 else -1.0 for it in data_y])\n",
+    "data_y = data_y.reshape((data_y.shape[0], 1))\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 122,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.6572036905606813.\n"
+      "Logistic regression accuracy 0.7134960847535697.\n"
      ]
     }
    ],
@@ -339,13 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 123,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adaboost accuracy 0.7806955287437899.\n"
+      "Adaboost accuracy 0.8315676339628435.\n"
      ]
     }
    ],
@@ -373,10 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
