--- a/Offline 1/preprocessor-2.ipynb
+++ b/Offline 1/preprocessor-2.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "# Imports\n",
     "import pandas as pd\n",
-    "from IPython.display import display\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "import utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+    "import utils\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Reading data\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -52,6 +51,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C1', 'C6', 'C13']\n"
+     ]
     }
    ],
    "source": [
@@ -59,10 +65,13 @@
     "display(adult_data)\n",
     "# Find out which columns have missing values\n",
     "all_columns = list(adult_data.columns)\n",
-    "missing_value_columns = []\n",
-    "for column in all_columns:\n",
-    "    if '?' in adult_data[column].values.tolist():\n",
-    "        missing_value_columns.append(column)\n",
+    "missing_value_columns = [\n",
+    "    column\n",
+    "    for column in all_columns\n",
+    "    if '?' in adult_data[column].values.tolist()\n",
+    "]\n",
+    "\n",
+    "print(missing_value_columns)\n",
     "\n",
     "for column in missing_value_columns:\n",
     "    adult_data[column].replace(['?'], adult_data[column].mode(), inplace=True)\n",
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -119,15 +128,8 @@
     }
    ],
    "source": [
-    "print(adult_data.shape)\n"
+    "print(adult_data.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
