Dont know what is happening with this offline

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 329,
    "outputs": [],
    "source": [
     "# set random seed\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 330,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 331,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 332,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -137,13 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 333,
    "outputs": [],
    "source": [
     "# pre processor 2\n",
-    "def read_adult_data():\n",
+    "def read_adult_data(file_name):\n",
     "    column_names = ['C'+str(i) for i in range(15)]\n",
-    "    return pd.read_csv('adult.csv',\n",
+    "    return pd.read_csv(file_name,\n",
     "                         names=column_names,\n",
     "                         header=None,\n",
     "                         sep=' *, * ',\n",
@@ -153,7 +153,7 @@
     "                            'C14': lambda x: float(x == '>50K')\n",
     "                         })\n",
     "\n",
-    "def process_adult_data(adult_data):\n",
+    "def process_adult_data(adult_data, test=False):\n",
     "    all_columns = list(adult_data.columns)\n",
     "    missing_value_columns = [\n",
     "        column\n",
@@ -169,6 +169,10 @@
     "    for column in columns_to_encode:\n",
     "        adult_data = encode_and_bind(adult_data, column)\n",
     "\n",
+    "    if test:\n",
+    "        column_to_add = [0.0] * adult_data.shape[0]\n",
+    "        adult_data['C13_Holand-Netherlands'] = column_to_add\n",
+    "\n",
     "    adult_data.insert(len(adult_data.columns)-1, 'C14', adult_data.pop('C14'))\n",
     "\n",
     "    all_columns = list(adult_data.columns)\n",
@@ -177,10 +181,15 @@
     "    return adult_data\n",
     "\n",
     "def preprocess_adult_data():\n",
-    "    adult_data = read_adult_data()\n",
+    "    adult_data = read_adult_data('adult.csv')\n",
     "    adult_data = process_adult_data(adult_data)\n",
     "    adult_data.to_csv('adult-data.csv')\n",
-    "    return adult_data"
+    "\n",
+    "    adult_test = read_adult_data('adult.test.csv')\n",
+    "    adult_test = process_adult_data(adult_test, test=True)\n",
+    "    adult_test.to_csv('adult-test.csv')\n",
+    "\n",
+    "    return adult_data, adult_test"
    ],
    "metadata": {
     "collapsed": false,
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 334,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -206,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 335,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 336,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 337,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -247,12 +256,14 @@
    "outputs": [],
    "source": [
     "# logistic regression\n",
-    "def train(x, y, early_terminate_threshold=0.0, learning_rate=0.0001, no_of_iterations=5000):\n",
+    "def train(x, y, early_terminate_threshold=0.0, learning_rate=0.0001, no_of_iterations=1000):\n",
     "    no_of_data, no_of_features = x.shape\n",
     "    w = np.random.rand(no_of_features, 1)\n",
     "    for _ in range(no_of_iterations):\n",
     "        z = np.dot(x, w)\n",
     "        h = np.tanh(z)\n",
+    "        # y_pred = predict(h)\n",
+    "        # error = 1 - accuracy(y_pred, y)\n",
     "        error = loss(h, y, no_of_data)\n",
     "        if error < early_terminate_threshold:\n",
     "            break\n",
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 338,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 339,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -319,7 +330,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 339,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -327,8 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "# data = preprocess_telco_data()\n",
-    "data = preprocess_adult_data()\n",
+    "data = preprocess_telco_data()\n",
     "# final_column = data.columns[-1]\n",
     "# train_dataset, test_dataset = train_test_split(data, test_size=0.2, random_state=10)\n",
     "#\n",
@@ -369,13 +391,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 341,
+   "outputs": [],
+   "source": [
+    "# training_set, test_set = preprocess_adult_data()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "outputs": [],
+   "source": [
+    "# training_set"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "outputs": [],
+   "source": [
+    "# test_set"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "outputs": [],
+   "source": [
+    "# training_set.insert(0, 'Ones', 1.0)\n",
+    "# training_set = training_set.to_numpy()\n",
+    "#\n",
+    "# test_set.insert(0, 'Ones', 1.0)\n",
+    "# test_set = test_set.to_numpy()\n",
+    "# # rows, columns = training_set.shape\n",
+    "#\n",
+    "# x_train = training_set[:, :-1]\n",
+    "# y_train = training_set[:, -1]\n",
+    "#\n",
+    "# x_test = test_set[:, :-1]\n",
+    "# y_test = test_set[:, -1]\n",
+    "#\n",
+    "# print(x_train.shape)\n",
+    "# print(y_train.shape)\n",
+    "# print(x_test.shape)\n",
+    "# print(y_test.shape)\n",
+    "#\n",
+    "# y_train = np.array([1.0 if it > 0 else -1.0 for it in y_train])\n",
+    "# y_train = y_train.reshape((y_train.shape[0], 1))\n",
+    "#\n",
+    "# y_test = np.array([1.0 if it > 0 else -1.0 for it in y_test])\n",
+    "# y_test = y_test.reshape((y_test.shape[0], 1))\n",
+    "#\n",
+    "# print(x_train.shape)\n",
+    "# print(y_train.shape)\n",
+    "# print(x_test.shape)\n",
+    "# print(y_test.shape)\n",
+    "\n",
+    "# x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.7134960847535697.\n"
+      "Logistic regression accuracy 0.6763662171753017.\n"
      ]
     }
    ],
@@ -395,24 +502,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 346,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adaboost accuracy 0.8315676339628435.\n"
+      "Adaboost accuracy 0.7750177430801988.\n"
      ]
     }
    ],
    "source": [
     "# adaboost test\n",
-    "h_ada, z_ada = adaboost(x_train, y_train, 15)\n",
+    "h_ada, z_ada = adaboost(x_train, y_train, 5)\n",
     "\n",
     "hypo = np.zeros(y_test.shape)\n",
     "for _h, _z in zip(h_ada, z_ada):\n",
     "    l = np.tanh(np.dot(x_test, _h))\n",
-    "    h_out = predict(l)\n",
+    "    # h_out = predict(l)\n",
     "    hypo += _z * l\n",
     "\n",
     "hypo /= sum(z_ada)\n",
@@ -429,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 346,
    "outputs": [],
    "source": [],
    "metadata": {
