Need to fix final mistakes

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -766,7 +766,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C5_Married-civ-spouse', 'C10', 'C0', 'C4', 'C5_Never-married', 'C12', 'C7_Own-child', 'C11', 'C2', 'C9', 'C7_Not-in-family', 'C6_Exec-managerial', 'C6_Other-service', 'C3_Bachelors', 'C3_Masters', 'C3_Prof-school', 'C7_Other-relative', 'C3_HS-grad', 'C7_Wife', 'C1_Private', 'C1_Self-emp-inc', 'C7_Unmarried', 'C3_11th', 'C8_White', 'C3_Doctorate', 'C5_Married-spouse-absent', 'C13_Peru', 'C3_Some-college', 'C13_Vietnam', 'C13_England', 'C3_1st-4th', 'C6_Handlers-cleaners', 'C3_Preschool', 'C6_Machine-op-inspct', 'C6_Farming-fishing', 'C13_United-States', 'C13_Hungary', 'C6_Protective-serv', 'C8_Black']\n"
+      "['C5_Married-civ-spouse', 'C10', 'C0', 'C4', 'C5_Never-married', 'C12', 'C7_Own-child', 'C11', 'C2', 'C9', 'C7_Not-in-family', 'C6_Exec-managerial', 'C6_Other-service', 'C3_Bachelors', 'C3_Masters', 'C3_Prof-school', 'C7_Other-relative', 'C3_HS-grad', 'C7_Wife', 'C1_Private', 'C1_Self-emp-inc', 'C7_Unmarried', 'C3_11th', 'C8_White', 'C3_Doctorate', 'C5_Married-spouse-absent', 'C13_Peru', 'C3_Some-college', 'C13_Vietnam', 'C13_England', 'C3_1st-4th', 'C6_Handlers-cleaners', 'C3_Preschool', 'C6_Machine-op-inspct', 'C6_Farming-fishing', 'C13_United-States', 'C13_Hungary', 'C6_Protective-serv', 'C8_Black', 'C5_Widowed', 'C6_Prof-specialty', 'C13_Ireland', 'C13_Japan']\n"
      ]
     }
    ],
@@ -774,7 +774,7 @@
     "final_column = training_set.columns[-1]\n",
     "#\n",
     "columns = info_gain(training_set)\n",
-    "feature_cutoff = 39\n",
+    "feature_cutoff = 43\n",
     "columns_to_use = columns[0:feature_cutoff]\n",
     "# columns_to_use = columns[-feature_cutoff:]\n",
     "print(columns_to_use)\n",
@@ -812,7 +812,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.8839137645107794.\n"
+      "Logistic regression accuracy 0.7330630796634113.\n"
      ]
     }
    ],
@@ -834,10 +834,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adaboost accuracy for k = 5 is 0.9985873103617714.\n",
-      "Adaboost accuracy for k = 10 is 0.9988329955162459.\n",
-      "Adaboost accuracy for k = 15 is 0.9994472084024323.\n",
-      "Adaboost accuracy for k = 20 is 0.9598918985320312.\n"
+      "Adaboost accuracy for k = 5 is 0.997481727166636.\n",
+      "Adaboost accuracy for k = 10 is 0.9475462195196855.\n",
+      "Adaboost accuracy for k = 15 is 0.9971131994349242.\n",
+      "Adaboost accuracy for k = 20 is 0.9989558380934832.\n"
      ]
     }
    ],
